commit : adding the success handler.

--- a/spring-security/spring-security-001-login/src/main/resources/application.properties
+++ b/spring-security/spring-security-001-login/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.database = mysql
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.open-in-view = false
 
 spring.thymeleaf.mode = HTML
 spring.thymeleaf.cache = false
@@ -30,4 +31,4 @@ spring.messages.encoding = UTF-8
 
 
 
-debug = true
+#debug = true
