--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -22,6 +22,7 @@
 		<module>spring-security-entity</module>
 		<module>spring-security-service</module>
 		<module>spring-security-001-login</module>
+		<module>spring-security-002-login-remember-me</module>
 	</modules>
 	<dependencies>
 		<dependency>
