--- a/spring-security/spring-security-002-login-remember-me/src/main/resources/application.properties
+++ b/spring-security/spring-security-002-login-remember-me/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password = root
 spring.jpa.database = mysql
 spring.jpa.generate-ddl = true
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 #spring.jpa.open-in-view = false
 
 spring.thymeleaf.mode = HTML
