commit : editing the server port.

--- a/spring-security/spring-security-002-login-remember-me/src/main/resources/application.properties
+++ b/spring-security/spring-security-002-login-remember-me/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.messages.encoding = UTF-8
 #spring.security.user.password = user
 #spring.security.user.roles = user,manager,admin
 
-server.port=8088
+#server.port=8088
 
 
 
