--- a/spring-security/spring-security-002-login-remember-me/src/main/resources/application.properties
+++ b/spring-security/spring-security-002-login-remember-me/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/kmh_test_db?serverTimezone = UTC&useSSL = false
+spring.datasource.url = jdbc:mysql://localhost:3306/kmh_test_db?serverTimezone=JST&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
 
