--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -26,6 +26,7 @@
 		<module>
 			spring-security-003-login-remember-me-persistence
 		</module>
+		<module>spring-security-004-login-one-session-per-user</module>
 	</modules>
 	<dependencies>
 		<dependency>
