--- a/spring-security/spring-security-003-login-remember-me-persistence/src/main/resources/application.properties
+++ b/spring-security/spring-security-003-login-remember-me-persistence/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/kmh_test_db?serverTimezone=JST&useSSL=false
 spring.datasource.username = root
-spring.datasource.password = rootR00T
+spring.datasource.password = root
 
 spring.jpa.database = mysql
 spring.jpa.generate-ddl = true
