commit : finished the validation.

--- a/spring-security/spring-security-006-login-register-process/src/main/resources/application.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/application.properties
@@ -18,6 +18,16 @@ spring.thymeleaf.prefix = classpath:templates/
 spring.thymeleaf.template-resolver-order = 1
 spring.thymeleaf.check-template-location=true
 
+#spring.thymeleaf.mode = HTML
+#spring.thymeleaf.cache = false
+#spring.thymeleaf.suffix = .html
+#spring.thymeleaf.enabled = true
+#spring.thymeleaf.encoding = UTF-8
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.template-resolver-order = 1
+#spring.thymeleaf.check-template=true
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.enable-spring-el-compiler=false
 
 spring.messages.basename = i18n/messages
 spring.messages.encoding = UTF-8
