--- a/spring-security/spring-security-006-login-register-process/src/main/resources/application.properties
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/kmh_test_db?serverTimezone=JST&useSSL=false
 spring.datasource.username = root
 spring.datasource.password = root
+spring.datasource.initialization-mode=always
+#logging.level.org.springframework=DEBUG
 
 spring.jpa.database = mysql
 spring.jpa.generate-ddl = true
@@ -37,14 +39,14 @@ spring.messages.encoding = UTF-8
 #spring.security.user.password = user
 #spring.security.user.roles = user,manager,admin
 
-#server.port=8088
+server.port=8088
 
 #==================================================================================
 
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
-spring.mail.username=*****@gmail.com
-spring.mail.password=*****
+spring.mail.username=**********@gmail.com
+spring.mail.password=**********
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
